# imp

./: '  .clang-format  .gitignore  LICENSE.md  README  README.md  SPECIFICATION.md  assemble.sh  build.sh  lessons-learned.txt  meson.build
include/: bmp.h  common.h  imagehandler.h  imageio.h  imageproc.h  main.h  sad-test.h  sad.h
palettes/: 20colors  darkblue  diadic-green  grays  indigo
res/icons/: conv.sh
res/palettes/: 20colors  diadic-blue  equdistant  mono-purple  mono-teal  pastel
src/: bmp.c  bmp.h  button_bar.c  button_bar.h  canvas.c  canvas.h  cursor.c  cursor.h  image.c  image.h  imagehandler.c  imageio.c  imageproc.c  imageproc.h  imp.c  imp.h  layer.c  layer.h  main-old.c  main.c  main.h  sad-test.c  sad-test.h  sad.c  sad.s  vector.c  vector.h
src/sad/: sad-test.c
src/system/: bmp.c  bmp.h  palette.c  palette.h
src/ui/: actionmenu.c  actionmenu.h  button_bar.c  button_bar.h  buttonpanel.c  buttonpanel.h  colormenu.c  colormenu.h  imp_button.c  imp_button.h  layermenu.c  layermenu.h  toolmenu.c  toolmenu.h
subprojects/: Unity.wrap  saru-buf.wrap
test/: imageproc.c
win32/: compile  menu.h  meson.build  res1.RES  resource.h  win32-setup-cl.txt  window.c
win32/include/: controls.h  definitions.h  fileio.h  io.h  win32.h
win32/res/: resource.h
win32/src/: control.c  fileio.c  io.c  main.c
